info between pageS

--- a/fullstack_template/static/home.html
+++ b/fullstack_template/static/home.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div id="content" />
-    <script src="dist/home.bundle.js" type="text/javascript"></script>
     <script type="text/javascript">
       $SCRIPT_ROOT = {{request.script_root|tojson|safe}};
+      var username = "{{ username }}"
+      var course = "{{ course }}"
     </script>
+    <script src="/dist/home.bundle.js" type="text/javascript"></script>
   </body>
 </html>
