--- a/fullstack_template/static/index.html
+++ b/fullstack_template/static/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="content" />
-    <script src="dist/bundle.js" type="text/javascript"></script>
+    <script src="/dist/index.bundle.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript">
       $SCRIPT_ROOT = {{request.script_root|tojson|safe}};
