--- a/fullstack_template/static/home.html
+++ b/fullstack_template/static/home.html
@@ -13,6 +13,7 @@
       $SCRIPT_ROOT = {{request.script_root|tojson|safe}};
       var username = "{{ username }}"
       var course = "{{ course }}"
+      var data = "{{ data }}"
     </script>
     <script src="/dist/home.bundle.js" type="text/javascript"></script>
   </body>
