--- a/fullstack_template/static/home.html
+++ b/fullstack_template/static/home.html
@@ -5,6 +5,7 @@
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Gaggle</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
       $SCRIPT_ROOT = {{request.script_root|tojson|safe}};
       var username = "{{ username }}"
       var course = "{{ course }}"
-      var data = "{{ data }}"
+      var data = {{ data|safe }}
     </script>
     <script src="/dist/home.bundle.js" type="text/javascript"></script>
   </body>
