--- a/fullstack_template/static/index.html
+++ b/fullstack_template/static/index.html
@@ -5,7 +5,7 @@
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/dist/favicon.png" type="image/x-icon">
     <title>Gaggle</title>
   </head>
   <body>
